--- a/index.ipynb
+++ b/index.ipynb
@@ -45,13 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import sqlite3\n",
+    "conn = sqlite3.connect('planets.db')\n",
+    "c = conn.cursor()"
    ]
   },
   {
@@ -95,98 +96,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>color</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Mercury</td>\n",
-       "      <td>gray</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Venus</td>\n",
-       "      <td>yellow</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Earth</td>\n",
-       "      <td>blue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Mars</td>\n",
-       "      <td>red</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Jupiter</td>\n",
-       "      <td>orange</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Saturn</td>\n",
-       "      <td>hazel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Uranus</td>\n",
-       "      <td>light blue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Neptune</td>\n",
-       "      <td>dark blue</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      name       color\n",
-       "0  Mercury        gray\n",
-       "1    Venus      yellow\n",
-       "2    Earth        blue\n",
-       "3     Mars         red\n",
-       "4  Jupiter      orange\n",
-       "5   Saturn       hazel\n",
-       "6   Uranus  light blue\n",
-       "7  Neptune   dark blue"
+       "[('Mercury', 'gray'),\n",
+       " ('Venus', 'yellow'),\n",
+       " ('Earth', 'blue'),\n",
+       " ('Mars', 'red'),\n",
+       " ('Jupiter', 'orange'),\n",
+       " ('Saturn', 'hazel'),\n",
+       " ('Uranus', 'light blue'),\n",
+       " ('Neptune', 'dark blue')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select name, color from planets\"\"\")\n",
+    "c.fetchall()"
    ]
   },
   {
@@ -198,94 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>color</th>\n",
-       "      <th>num_of_moons</th>\n",
-       "      <th>mass</th>\n",
-       "      <th>rings</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Jupiter</td>\n",
-       "      <td>orange</td>\n",
-       "      <td>68</td>\n",
-       "      <td>317.90</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Saturn</td>\n",
-       "      <td>hazel</td>\n",
-       "      <td>62</td>\n",
-       "      <td>95.19</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Uranus</td>\n",
-       "      <td>light blue</td>\n",
-       "      <td>27</td>\n",
-       "      <td>14.54</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Neptune</td>\n",
-       "      <td>dark blue</td>\n",
-       "      <td>14</td>\n",
-       "      <td>17.15</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   id     name       color  num_of_moons    mass  rings\n",
-       "0   5  Jupiter      orange            68  317.90      0\n",
-       "1   6   Saturn       hazel            62   95.19      1\n",
-       "2   7   Uranus  light blue            27   14.54      1\n",
-       "3   8  Neptune   dark blue            14   17.15      1"
+       "[(5, 'Jupiter', 'orange', 68, 317.9, 0),\n",
+       " (6, 'Saturn', 'hazel', 62, 95.19, 1),\n",
+       " (7, 'Uranus', 'light blue', 27, 14.54, 1),\n",
+       " (8, 'Neptune', 'dark blue', 14, 17.15, 1)]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select * from planets where mass > 1.00\"\"\")\n",
+    "c.fetchall()"
    ]
   },
   {
@@ -297,74 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>mass</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Mercury</td>\n",
-       "      <td>0.55</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Venus</td>\n",
-       "      <td>0.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Earth</td>\n",
-       "      <td>1.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Mars</td>\n",
-       "      <td>0.11</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      name  mass\n",
-       "0  Mercury  0.55\n",
-       "1    Venus  0.82\n",
-       "2    Earth  1.00\n",
-       "3     Mars  0.11"
+       "[('Mercury', 0.55), ('Venus', 0.82), ('Earth', 1.0), ('Mars', 0.11)]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select name, mass from planets where mass <= 1.00\"\"\")\n",
+    "c.fetchall()"
    ]
   },
   {
@@ -376,74 +193,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>color</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Jupiter</td>\n",
-       "      <td>orange</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Saturn</td>\n",
-       "      <td>hazel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Uranus</td>\n",
-       "      <td>light blue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Neptune</td>\n",
-       "      <td>dark blue</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      name       color\n",
-       "0  Jupiter      orange\n",
-       "1   Saturn       hazel\n",
-       "2   Uranus  light blue\n",
-       "3  Neptune   dark blue"
+       "[('Jupiter', 'orange'),\n",
+       " ('Saturn', 'hazel'),\n",
+       " ('Uranus', 'light blue'),\n",
+       " ('Neptune', 'dark blue')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select name, color from planets where num_of_moons > 10\"\"\")\n",
+    "c.fetchall()"
    ]
   },
   {
@@ -455,74 +225,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>color</th>\n",
-       "      <th>num_of_moons</th>\n",
-       "      <th>mass</th>\n",
-       "      <th>rings</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Earth</td>\n",
-       "      <td>blue</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Mars</td>\n",
-       "      <td>red</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.11</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   id   name color  num_of_moons  mass  rings\n",
-       "0   3  Earth  blue             1  1.00      0\n",
-       "1   4   Mars   red             2  0.11      0"
+       "[(4, 'Mars', 'red', 2, 0.11, 0)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select * from planets where num_of_moons >= 1 and\n",
+    "mass < 1\"\"\")\n",
+    "c.fetchall()"
    ]
   },
   {
@@ -534,68 +255,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>color</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Earth</td>\n",
-       "      <td>blue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Uranus</td>\n",
-       "      <td>light blue</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Neptune</td>\n",
-       "      <td>dark blue</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      name       color\n",
-       "0    Earth        blue\n",
-       "1   Uranus  light blue\n",
-       "2  Neptune   dark blue"
+       "[('Earth', 'blue'), ('Uranus', 'light blue'), ('Neptune', 'dark blue')]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "c.execute(\"\"\"select name, color\n",
+    "             from planets\n",
+    "             where color = 'blue' or color = 'light blue' or color = 'dark blue'\"\"\")\n",
+    "c.fetchall()"
    ]
   },
   {
@@ -615,9 +294,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -629,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
